--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -179,15 +179,14 @@ $( document ).ready(function() {
         constellations: true,
         gridlines_eq: true,
         mouse: false,
-        keyboard: true,
+        keyboard: false,
         showdate: false,
-        showpostion: false,
+        showposition: false,
         gradient: false,
         showgalaxy: true,
         transparent: true,
+        credit: false,
 	});
-
-    planetarium.credit='';
 });
 
 </script>
