make virtualsky live

--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -176,6 +176,7 @@ $( document ).ready(function() {
         latitude: {{ camera_latitude }},
         longitude: {{ camera_longitude }},
         az: {{ camera_az }},
+        live: true,
         constellations: true,
         gridlines_eq: true,
         mouse: false,
