--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -680,6 +680,133 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_HOST.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.LIBCAMERA__MQTT_HOST(class='form-control bg-secondary') }}
+            <div id="LIBCAMERA__MQTT_HOST-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">MQTT hostname</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_TRANSPORT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.LIBCAMERA__MQTT_TRANSPORT(class='form-select bg-secondary') }}
+            <div id="LIBCAMERA__MQTT_TRANSPORT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">MQTT Transport</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_PORT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.LIBCAMERA__MQTT_PORT(class='form-control bg-secondary') }}
+            <div id="LIBCAMERA__MQTT_PORT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">MQTT port - 8883 = TLS, 1883 = standard</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_USERNAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.LIBCAMERA__MQTT_USERNAME(class='form-control bg-secondary') }}
+            <div id="LIBCAMERA__MQTT_USERNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">MQTT Username</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_PASSWORD.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.LIBCAMERA__MQTT_PASSWORD(class='form-control bg-secondary') }}
+            <div id="LIBCAMERA__MQTT_PASSWORD-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">MQTT Password</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_QOS.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.LIBCAMERA__MQTT_QOS(class='form-control bg-secondary') }}
+            <div id="LIBCAMERA__MQTT_QOS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">MQTT QoS - 0 (default), 1, or 2</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_TLS.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.LIBCAMERA__MQTT_TLS(class='form-check-input') }}
+                <div id="LIBCAMERA__MQTT_TLS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Use TLS/SSL for MQTT connections</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_CERT_BYPASS.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.LIBCAMERA__MQTT_CERT_BYPASS(class='form-check-input') }}
+                <div id="LIBCAMERA__MQTT_CERT_BYPASS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Bypass certificate validation</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_EXPOSURE_TOPIC.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.LIBCAMERA__MQTT_EXPOSURE_TOPIC(class='form-control bg-secondary') }}
+            <div id="LIBCAMERA__MQTT_EXPOSURE_TOPIC-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_IMAGE_TOPIC.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.LIBCAMERA__MQTT_IMAGE_TOPIC(class='form-control bg-secondary') }}
+            <div id="LIBCAMERA__MQTT_IMAGE_TOPIC-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__MQTT_METADATA_TOPIC.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.LIBCAMERA__MQTT_METADATA_TOPIC(class='form-control bg-secondary') }}
+            <div id="LIBCAMERA__MQTT_METADATA_TOPIC-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6"></div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.PYCURL_CAMERA__URL.label(class='col-form-label') }}
         </div>
         <div class="col-sm-6">
@@ -8336,6 +8463,15 @@ const field_names = [
     'LIBCAMERA__AWB_DAY',
     'LIBCAMERA__EXTRA_OPTIONS',
     'LIBCAMERA__EXTRA_OPTIONS_DAY',
+    'LIBCAMERA__MQTT_TRANSPORT',
+    'LIBCAMERA__MQTT_HOST',
+    'LIBCAMERA__MQTT_PORT',
+    'LIBCAMERA__MQTT_USERNAME',
+    'LIBCAMERA__MQTT_PASSWORD',
+    'LIBCAMERA__MQTT_QOS',
+    'LIBCAMERA__MQTT_EXPOSURE_TOPIC',
+    'LIBCAMERA__MQTT_IMAGE_TOPIC',
+    'LIBCAMERA__MQTT_METADATA_TOPIC',
     'PYCURL_CAMERA__URL',
     'PYCURL_CAMERA__IMAGE_FILE_TYPE',
     'PYCURL_CAMERA__USERNAME',
@@ -8598,6 +8734,8 @@ const checkbox_field_names = [
     'GENERIC_GPIO__A_INVERT_OUTPUT',
     'DEVICE__MQTT_TLS',
     'DEVICE__MQTT_CERT_BYPASS',
+    'LIBCAMERA__MQTT_TLS',
+    'LIBCAMERA__MQTT_CERT_BYPASS',
     'ADSB__ENABLE',
     'ADSB__CERT_BYPASS',
     'ADSB__LABEL_ENABLE',
