--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -650,6 +650,35 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__CCM_DISABLE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.LIBCAMERA__CCM_DISABLE(class='form-check-input') }}
+                <div id="LIBCAMERA__CCM_DISABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Disabling CCM requires rpicam-apps 1.9.0 (released Sept 2025)</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIBCAMERA__CCM_DISABLE_DAY.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.LIBCAMERA__CCM_DISABLE_DAY(class='form-check-input') }}
+                <div id="LIBCAMERA__CCM_DISABLE_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.LIBCAMERA__IMMEDIATE_DAY.label }}
         </div>
         <div class="col-sm-2">
@@ -8709,6 +8738,8 @@ const checkbox_field_names = [
     'YOUTUBE__UPLOAD_PANORAMA_VIDEO',
     'LIBCAMERA__AWB_ENABLE',
     'LIBCAMERA__AWB_ENABLE_DAY',
+    'LIBCAMERA__CCM_DISABLE',
+    'LIBCAMERA__CCM_DISABLE_DAY',
     'LIBCAMERA__IMMEDIATE',
     'LIBCAMERA__IMMEDIATE_DAY',
     'ACCUM_CAMERA__EVEN_EXPOSURES',
