--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -588,7 +588,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
-            <div>CCM may only be disabled when AWB is disabled</div>
+            <div>CCM may only be disabled when AWB is disabled [Default: Enabled]</div>
             <div><span class="badge rounded-pill bg-info text-dark">Note</span> Disabling CCM requires rpicam-apps 1.9.0 (released Sept 2025)</div>
         </div>
     </div>
