add restart action

--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -498,7 +498,7 @@ $('#form_settime').on('submit', function() {
                 </div>
             </div>
             <div class="col-sm-8">
-                <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> This will interrupt operation if indi-allsky is operational</div>
+                <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> This will interrupt image capture if indi-allsky is operational</div>
             </div>
         </div>
 
