--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -38,7 +38,7 @@ var camera_id = {{ camera_id }};
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
     <button class="nav-link link-info bg-dark active" id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button" role="tab" aria-controls="nav-info" aria-selected="true">Information</button>
     <button class="nav-link link-warning bg-dark" id="nav-time-tab" data-bs-toggle="tab" data-bs-target="#nav-time" type="button" role="tab" aria-controls="nav-time" aria-selected="false">Time</button>
-    <button class="nav-link link-secondary bg-dark" id="nav-indiserver-tab" data-bs-toggle="tab" data-bs-target="#nav-indiserver" type="button" role="tab" aria-controls="nav-indiserver" aria-selected="false">indiserver</button>
+    <button class="nav-link link-secondary bg-dark" id="nav-indiserver-tab" data-bs-toggle="tab" data-bs-target="#nav-indiserver" type="button" role="tab" aria-controls="nav-indiserver" aria-selected="false">INDI Drivers</button>
     <button class="nav-link link-success bg-dark" id="nav-services-tab" data-bs-toggle="tab" data-bs-target="#nav-services" type="button" role="tab" aria-controls="nav-services" aria-selected="false">Services</button>
     <button class="nav-link link-danger bg-dark" id="nav-powercontrol-tab" data-bs-toggle="tab" data-bs-target="#nav-powercontrol" type="button" role="tab" aria-controls="nav-powercontrol" aria-selected="false">Utilities</button>
   </div>
