--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -72,6 +72,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-6">
             <a href="{{ url_for('indi_allsky.camera_lens_view') }}" class="text-decoration-none link-info">
                 <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Camera-Interfaces" class="text-decoration-none link-info" target="_blank">Camera Interface Wiki</a></div>
+                <div><span class="badge rounded-pill bg-info text-dark">Note</span> The indi camera driver may be changed on the System page</div>
             </a>
         </div>
     </div>
