--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -473,7 +473,7 @@ $('#form_settime').on('submit', function() {
 
     <div><span class="badge rounded-pill bg-info text-dark">Note</span> This has no effect on libcamera-based configurations</div>
 
-    <div><span class="badge rounded-pill bg-info text-dark">Note</span> The default camera selection will not update until the camera selection has changed</div>
+    <div><span class="badge rounded-pill bg-info text-dark">Note</span> The default driver selection will not update until the camera selection has changed</div>
 
     <hr>
 
