--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -513,16 +513,21 @@ $('#form_settime').on('submit', function() {
         </div>
 
         <hr>
+        <hr>
+        <hr>
 
         <div class="form-group row">
+            <div class="col-sm-1">
+                <input class="form-check-input" id="INDISERVER_CHANGE_CONFIRM1" name="INDISERVER_CHANGE_CONFIRM1" type="checkbox" value="y"> Confirm 1
+            </div>
+
             <div class="col-sm-1">
                 <button id="button_indiserver_change" class="btn btn-primary">Update</button>
             </div>
 
-            <div class="col-sm-2">
-                <input class="form-check-input" id="INDISERVER_CHANGE_CONFIRM1" name="INDISERVER_CHANGE_CONFIRM1" type="checkbox" value="y"> Confirm
+            <div class="col-sm-1">
+                <input class="form-check-input" id="INDISERVER_CHANGE_CONFIRM2" name="INDISERVER_CHANGE_CONFIRM2" type="checkbox" value="y"> Confirm 2
             </div>
-
         </div>
 
     </form>
@@ -1135,7 +1140,13 @@ $("#button_indiserver_change").on("click", function() {
         return;
     }
 
+    if (! $("#INDISERVER_CHANGE_CONFIRM2").prop('checked')) {
+        console.log('Change indiserver checkbox not checked');
+        return;
+    }
+
     $("#INDISERVER_CHANGE_CONFIRM1").prop('checked', false);
+    $("#INDISERVER_CHANGE_CONFIRM2").prop('checked', false);
 
     $("#button_indiserver_change").html(
       '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">Update</span>'
@@ -1207,6 +1218,7 @@ $( document ).ready(function() {
     $("#FLUSH_DAYTIME_CONFIRM1").prop('checked', false);
     $("#FLUSH_DAYTIME_CONFIRM2").prop('checked', false);
     $("#INDISERVER_CHANGE_CONFIRM1").prop('checked', false);
+    $("#INDISERVER_CHANGE_CONFIRM2").prop('checked', false);
     $("#RESTART_INDISERVER").prop('checked', false);
 
 
