remove example text

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -523,14 +523,14 @@ var camera_id = {{ camera_id }};
 
     <hr>
 
-<div class="accordion accordion-flush" id="accordionFlushExample">
+<div class="accordion accordion-flush" id="accordionCameraSettings">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed bg-secondary text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+      <button class="accordion-button collapsed bg-secondary text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLibcamera" aria-expanded="false" aria-controls="collapseLibcamera">
         libcamera Settings
       </button>
     </h2>
-    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+    <div id="collapseLibcamera" class="accordion-collapse collapse" data-bs-parent="#accordionCameraSettings">
       <div class="accordion-body bg-dark bg-opacity-50">
 
 
@@ -853,11 +853,11 @@ var camera_id = {{ camera_id }};
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed bg-secondary text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+      <button class="accordion-button collapsed bg-secondary text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePycurl" aria-expanded="false" aria-controls="collapsePycurl">
         PyCurl Camera Settings
       </button>
     </h2>
-    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+    <div id="collapsePycurl" class="accordion-collapse collapse" data-bs-parent="#accordionCameraSettings">
       <div class="accordion-body bg-dark bg-opacity-50">
 
 
@@ -916,11 +916,11 @@ var camera_id = {{ camera_id }};
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed bg-secondary text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+      <button class="accordion-button collapsed bg-secondary text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTestCamera" aria-expanded="false" aria-controls="collapseTestCamera">
         Test Camera Settings
       </button>
     </h2>
-    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+    <div id="collapseTestCamera" class="accordion-collapse collapse" data-bs-parent="#accordionCameraSettings">
       <div class="accordion-body bg-dark bg-opacity-50">
 
 
@@ -1005,11 +1005,11 @@ var camera_id = {{ camera_id }};
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button bg-secondary text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="true" aria-controls="flush-collapseFour">
+      <button class="accordion-button bg-secondary text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseIndi" aria-expanded="true" aria-controls="collapseIndi">
         INDI Camera Settings
       </button>
     </h2>
-    <div id="flush-collapseFour" class="accordion-collapse collapse show" data-bs-parent="#accordionFlushExample">
+    <div id="collapseIndi" class="accordion-collapse collapse show" data-bs-parent="#accordionCameraSettings">
       <div class="accordion-body bg-dark bg-opacity-50">
 
 
