change gain to a float

--- a/indi_allsky/flask/templates/cameraLens.html
+++ b/indi_allsky/flask/templates/cameraLens.html
@@ -72,12 +72,12 @@ var camera_id = {{ camera_id }};
 
     <div class="row">
         <div class="col-2">Gain</div>
-        <div class="col-4">{{ camera.minGain | int }}-{{ camera.maxGain | int }}</div>
+        <div class="col-4">{{ "%0.1f"|format(camera.minGain | float) }} - {{ "%0.1f"|format(camera.maxGain | float) }}</div>
     </div>
 
     <div class="row">
         <div class="col-2">Exposure</div>
-        <div class="col-4">{{ "%0.6f"|format(camera.minExposure | float) }}-{{ camera.maxExposure | int }}s</div>
+        <div class="col-4">{{ "%0.6f"|format(camera.minExposure | float) }} - {{ camera.maxExposure | int }}s</div>
     </div>
 
     <hr>
