--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -129,7 +129,7 @@ var camera_id = {{ camera_id }};
             <div id="CCD_CONFIG__NIGHT__GAIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Maximum Gain permitted: <b>{{ camera_maxGain }}</b></div>
+            <div>Maximum Gain permitted: <b>{{ "%0.2f"|format(camera_maxGain | float) }}</b></div>
         </div>
     </div>
     <div class="form-group row">
@@ -173,7 +173,7 @@ var camera_id = {{ camera_id }};
             <div id="CCD_CONFIG__DAY__GAIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Minimum Gain permitted: <b>{{ camera_minGain }}</b></div>
+            <div>Minimum Gain permitted: <b>{{ "%0.2f"|format(camera_minGain | float) }}</b></div>
         </div>
     </div>
     <div class="form-group row">
