disable drawing keogram line

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3174,7 +3174,7 @@ var camera_id = {{ camera_id }};
             {{ form_config.DETECT_STARS_THOLD(class='form-control bg-secondary') }}
             <div id="DETECT_STARS_THOLD-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">0.6 is a good value for color images, 0.55 for mono</div>
+        <div class="col-sm-8">0.5 - 0.6 is a good value to start</div>
     </div>
 
     <hr>
