--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3208,6 +3208,8 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <hr>
+
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.DETECT_DRAW.label }}
@@ -3218,7 +3220,7 @@ var camera_id = {{ camera_id }};
                 <div id="DETECT_DRAW-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8">Mark detections on image for calibration</div>
+        <div class="col-sm-8">Mark star and meteor line detections on image for calibration</div>
     </div>
 
     <hr>
