--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1246,6 +1246,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-6">
             <div>Upper-left (x1, y1)</div>
             <div><span class="badge rounded-pill bg-info text-dark">Note</span> Not used if Detection Mask is defined</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note 2</span> Coordinates are used before geometry changes (scaling, flipping, etc)</div>
         </div>
     </div>
 
@@ -3364,6 +3365,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-6">
             <div>Upper-left (x1, y1)</div>
             <div><span class="badge rounded-pill bg-info text-dark">Note</span> Not used if Detection Mask is defined</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note 2</span> Coordinates are used before geometry changes (scaling, flipping, etc)</div>
         </div>
     </div>
 
