--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -189,6 +189,32 @@ var camera_id = {{ camera_id }};
 
     <hr>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CCD_CONFIG__AUTO_GAIN_ENABLE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.CCD_CONFIG__AUTO_GAIN_ENABLE(class='form-check-input') }}
+                <div id="CCD_CONFIG__AUTO_GAIN_ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CCD_CONFIG__AUTO_GAIN_DIV.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CCD_CONFIG__AUTO_GAIN_DIV(class='form-select bg-secondary') }}
+            <div id="CCD_CONFIG__AUTO_GAIN_DIV-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Auto-Gain divisor</div>
+    </div>
+
+    <hr>
+
     <div><span class="badge rounded-pill bg-info text-dark">Info</span> A full service restart (not reload) is recommended when changing exposure controls</div>
 
     <hr>
@@ -8240,6 +8266,7 @@ const field_names = [
     'CCD_CONFIG__MOONMODE__BINNING',
     'CCD_CONFIG__DAY__GAIN',
     'CCD_CONFIG__DAY__BINNING',
+    'CCD_CONFIG__AUTO_GAIN_DIV',
     'CCD_EXPOSURE_MAX',
     'CCD_EXPOSURE_DEF',
     'CCD_EXPOSURE_MIN',
@@ -8693,6 +8720,7 @@ const field_names = [
 
 const checkbox_field_names = [
     'ENCRYPT_PASSWORDS',
+    'CCD_CONFIG__AUTO_GAIN_ENABLE',
     'FOCUS_MODE',
     'USE_NIGHT_COLOR',
     'AUTO_WB',
