--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -204,13 +204,13 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.CCD_CONFIG__AUTO_GAIN_DIV.label(class='col-form-label') }}
+            {{ form_config.CCD_CONFIG__AUTO_GAIN_LEVELS.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.CCD_CONFIG__AUTO_GAIN_DIV(class='form-select bg-secondary') }}
-            <div id="CCD_CONFIG__AUTO_GAIN_DIV-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.CCD_CONFIG__AUTO_GAIN_LEVELS(class='form-select bg-secondary') }}
+            <div id="CCD_CONFIG__AUTO_GAIN_LEVELS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Auto-Gain divisor</div>
+        <div class="col-sm-8">Auto-Gain Levels - Gain will be divided into even levels between min and max</div>
     </div>
 
     <hr>
@@ -8266,7 +8266,7 @@ const field_names = [
     'CCD_CONFIG__MOONMODE__BINNING',
     'CCD_CONFIG__DAY__GAIN',
     'CCD_CONFIG__DAY__BINNING',
-    'CCD_CONFIG__AUTO_GAIN_DIV',
+    'CCD_CONFIG__AUTO_GAIN_LEVELS',
     'CCD_EXPOSURE_MAX',
     'CCD_EXPOSURE_DEF',
     'CCD_EXPOSURE_MIN',
