--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -199,7 +199,11 @@ var camera_id = {{ camera_id }};
                 <div id="CCD_CONFIG__AUTO_GAIN_ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">
+            <div>Exposure Priority Gain Mode dynamically adjusts the gain to maximize exposure times</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Maximum gain is night gain, minimum is daytime gain</div>
+        </div>
+
     </div>
 
     <div class="form-group row">
