--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -201,7 +201,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>Exposure Priority Gain Mode dynamically adjusts the gain to maximize exposure times</div>
-            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Maximum gain is night gain, minimum is daytime gain</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Maximum gain will be night gain, minimum will be daytime gain (Moon mode is ignored)</div>
         </div>
 
     </div>
@@ -214,7 +214,10 @@ var camera_id = {{ camera_id }};
             {{ form_config.CCD_CONFIG__AUTO_GAIN_LEVELS(class='form-select bg-secondary') }}
             <div id="CCD_CONFIG__AUTO_GAIN_LEVELS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Auto-Gain Levels - Gain will be divided into even levels between min and max</div>
+        <div class="col-sm-8">
+            <div>Gain will be divided into even levels between min and max</div>
+            <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Setting this value too low will cause exposure/gain flapping</div>
+        </div>
     </div>
 
     <hr>
