--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -470,7 +470,7 @@ $('#form_settime').on('submit', function() {
             {{ form_timezone.NEW_TIMEZONE.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
-            {{ form_timezone.NEW_TIMEZONE(class='form-control bg-secondary') }}
+            {{ form_timezone.NEW_TIMEZONE(class='form-select bg-secondary') }}
             <div id="NEW_TIMEZONE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6"></div>
